--- a/css/style.red.css
+++ b/css/style.red.css
@@ -579,7 +579,8 @@ nav.navbar a.nav-link:hover {
 */
 .customers-section img {
   padding: 10px;
-  max-width: 80px;
+  /* max-width: 500px; */
+  max-height: 200px;
 }
 
 /*
